# Psy

./: .gitattributes  Cargo.toml  README.md  psc  test.psc  test.psy
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: examples.yml  tests.yml
checker/: Cargo.toml
checker/src/: checker.rs  diagnostics.rs  lib.rs  rules.rs  symbols.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/formatter/: mod.rs
core/src/interpreter/: environment.rs  evaluator.rs  mod.rs  native.rs
core/src/lexer/: mod.rs  token.rs
core/src/parser/: ast.rs  mod.rs
crates/: README.md
crates/async/: Cargo.toml
crates/crypto/: Cargo.toml
crates/fs/: Cargo.toml  README.md
crates/json/: Cargo.toml
crates/math/: Cargo.toml  README.md
crates/network/: Cargo.toml
crates/network/src/: fetch.rs  http.rs  lib.rs  server.rs  websocket.rs
crates/os/: Cargo.toml
crates/time/: Cargo.toml
examples/: README.md  array_demo.psc  average.psy  complex_math.psc  counter.psc  debug_demo.psc  factorial.psc  function.psy  grade_check.psc  odd_even.psc  random_test.psy  recurse_static.psc  test_format.psy
examples/async/: test.psy
examples/crypto/: advanced.psy  diff_algo.psy
examples/errors/: constant_errors.psc  constant_errors.psy  native_immutability.psc  native_immutability.psy
examples/fs/: file_demo.psy
examples/general/: debug_demo.psy  function.psy  recurse_static.psy
examples/math/: advanced.psy  aio.psy  average.psy  complex_math.psy  factorial.psy  grade_check.psy  linear_algebra.psy  odd_even.psy  stats.psy
examples/network/: http_demo.psy  server_demo.psy  websocket.psy
examples/os/: os.psy
examples/pub_mod/: .regression-ignore  main.psy  test.psc  test1.psc  test2.psc  test2.psy
examples/time/: complete_test.psy  fps_test.psy  performance_test.psy  ping_pong.psy
helper/: Cargo.toml
lsp/: Cargo.toml  definitions.json
lsp/src/: main.rs
modules/: README.md
modules/crypto/: Cargo.toml
modules/fs/: Cargo.toml  README.md
modules/math/: Cargo.toml  README.md
modules/time/: Cargo.toml
modules/util/: README.md
scripts/: run_tests.bash
src/interpreter/: environment.rs  evaluator.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
structs/: Cargo.toml
syntax/: Cargo.toml
syntax/src/: diagnostics.rs  lib.rs  rules.rs  symbols.rs  syntax.rs
types/: Cargo.toml
types/src/: lib.rs
vscode-extension/: language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: pseudocode.tmLanguage.json  (+1 more)
(+111 files in other folders)
