[workspace]
resolver = "2"
members = ["core", "cli", "checker", "lsp", "types", "modules/math", "modules/fs", "modules/time", "modules/crypto"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = false
opt-level = 3
overflow-checks = true
debug = false
strip = true

[profile.dev]
opt-level = 0
debug = true
codegen-units = 256

[profile.release.build-override]
opt-level = 3
codegen-units = 1
