[package]
name = "psycore"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
helper = { path = "../helper/" }
math = { path = "../crates/math" }
fs = { path = "../crates/fs" }
time = { path = "../crates/time" }
crypto = { path = "../crates/crypto" }
network = { path = "../crates/network" }
json = { path = "../crates/json" }
async_psy = { path = '../crates/async' }
os = { path = '../crates/os' }
