[package]
name = "psy-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "psy-lsp"
path = "src/main.rs"

[dependencies]
once_cell = "1.21.4"
psy-checker = { path = "../checker" }
regex = "1.12.4"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ['full'] }
tower-lsp = "0.20.0"
