[package]
name = "network"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3.32"
once_cell = "1.21.4"
reqwest = {version="0.13.4", features = ["json", "blocking"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = {version="0.29.0",features = ["native-tls"]}
tower = "0.5.3"
tower-http = {version="0.7.0",  features = ["cors"] }
types = { path = "../../structs/" }
uuid = {version="1.23.3", features = ["v4"] }
